deploy: e84e2bd4f3870f1d894456ef5c9ff43310cc9614

--- a/events/2021-11-18-programming-cafe/index.html
+++ b/events/2021-11-18-programming-cafe/index.html
@@ -34,7 +34,7 @@
 November 18, 2021
 </p>
 <h3>Where?</h3>
-<p>Exchange Building C33</p>
+<p>Exchange Building LT1</p>
 </div>
 <div class=article-left>
 <h1>Programming Café</h1>
@@ -43,7 +43,7 @@ November 18, 2021
 <p>This is a much more laid back event than our workshops and talks, just rock up and work on a project, and speak to other people about their projects!
 We&rsquo;ll be encouraging people to do a brief show and tell towards the end, and you may end up spotlit in our newsletter!</p>
 <p>We will also have coffee and tea.</p>
-<p>The event will take place in the Exchange Building C33 (provisionally, subject to room bookings.)</p>
+<p>The event will take place in the Exchange Building LT1.</p>
 </div>
 </div>
 </article>
