--- a/events/index.html
+++ b/events/index.html
@@ -30,6 +30,11 @@
 <h1>Events</h1>
 </div>
 <article class=item>
+<time class=post-date>07/12/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-12-16-christmas/>HackSoc Christmas Quiz</a>
+</article>
+<article class=item>
 <time class=post-date>25/11/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-11-25-programming-cafe/>Programming Café</a>
