deploy: 0bece291c5a303d019e4425168061c30270e6ee9

--- a/events/2021-12-07-email/index.html
+++ b/events/2021-12-07-email/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Programming Café</title>
+<title>How email works: A Talk</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -31,19 +31,16 @@
 <h3>When?</h3>
 <p>7-9pm</p>
 <p>
-December 9, 2021
+December 16, 2021
 </p>
 <h3>Where?</h3>
-<p>C33, Exchange Building, Jubilee Campus</p>
+<p>LT3, Exchange Building, Jubilee Campus</p>
 </div>
 <div class=article-left>
-<h1>Programming Café</h1>
+<h1>How email works: A Talk</h1>
 <div>
-<p>Hello and welcome to our programming cafe events!</p>
-<p>This is a much more laid back event than our workshops and talks, just rock up and work on a project, and speak to other people about their projects!
-We&rsquo;ll be encouraging people to do a brief show and tell towards the end, and you may end up spotlit in our newsletter!</p>
-<p>We will also have coffee and tea.</p>
-<p>The event will take place in the Exchange Building C33.</p>
+<p>Email is a tool that has been around since the dawn of the internet, and is nearly ubiquitous, but have you ever thought about how it works?</p>
+<p>In this talk James will be giving an overview of all of the different components that make email work, and why even after 50 years it is still hard to setup your own email server.</p>
 </div>
 </div>
 </article>
