--- a/events/index.html
+++ b/events/index.html
@@ -30,6 +30,11 @@
 <h1>Events</h1>
 </div>
 <article class=item>
+<time class=post-date>16/12/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-12-07-email/>How email works: A Talk</a>
+</article>
+<article class=item>
 <time class=post-date>09/12/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-12-09-programming-cafe/>Programming Café</a>
