deploy: 1c1ecf995413c61d5b4cac56ada85c1dafa94e92

--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -30,6 +30,11 @@
 <h1>Newsletters</h1>
 </div>
 <article class=item>
+<time class=post-date>05/12/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2021-12-05/>End of Term Events.</a>
+</article>
+<article class=item>
 <time class=post-date>29/06/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/newsletters/newsletter-2021-06-29/>EGM on the 13th of July!</a>
