--- a/events/index.html
+++ b/events/index.html
@@ -35,6 +35,11 @@
 <a href=https://hacksocnotts.co.uk/events/2021-12-07-email/>How email works: A Talk</a>
 </article>
 <article class=item>
+<time class=post-date>14/12/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-12-14-blog-workshop/>Making a blog and getting it online!</a>
+</article>
+<article class=item>
 <time class=post-date>09/12/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-12-09-programming-cafe/>Programming Café</a>
