--- a/content/newsletters/newsletter-2022-01-02.html
+++ b/content/newsletters/newsletter-2022-01-02.html
@@ -1,3 +1,13 @@
+---
+author: "HackSoc Committee"
+title: "End of Term Message"
+date: "2022-01-02"
+tags: []
+categories: []
+ShowToc: false
+TocOpen: false
+---
+
 <!DOCTYPE html>
 <html>
 
