deploy: 2c9288e7207110345e9ecc2b3cdcf4416297d9f5

--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -30,6 +30,11 @@
 <h1>Newsletters</h1>
 </div>
 <article class=item>
+<time class=post-date>02/01/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2022-01-02/>End of Term Message</a>
+</article>
+<article class=item>
 <time class=post-date>05/12/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/newsletters/newsletter-2021-12-05/>End of Term Events.</a>
