--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@ There are currently no planned events.
 <div>
 <h2><a href=/newsletters>Newsletters</a></h2>
 <article class=item>
+<time class=post-date>02/01/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2022-01-02/>End of Term Message</a>
+</article>
+<article class=item>
 <time class=post-date>05/12/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/newsletters/newsletter-2021-12-05/>End of Term Events.</a>
@@ -75,11 +80,6 @@ There are currently no planned events.
 <time class=post-date>29/06/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/newsletters/newsletter-2021-06-29/>EGM on the 13th of July!</a>
-</article>
-<article class=item>
-<time class=post-date>28/04/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2021-04-28/>AGM & Lightning Talks</a>
 </article>
 <div id=paginator>
 1 of 5
