--- a/events/index.html
+++ b/events/index.html
@@ -30,6 +30,46 @@
 <h1>Events</h1>
 </div>
 <article class=item>
+<time class=post-date>24/02/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-24-programming-cafe/>Programming Café</a>
+</article>
+<article class=item>
+<time class=post-date>22/02/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-22-unity-workshop/>Unity Workshop</a>
+</article>
+<article class=item>
+<time class=post-date>17/02/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-17-c-50-years/>Half a century of C</a>
+</article>
+<article class=item>
+<time class=post-date>15/02/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-15-python3/>Introduction to Python - Workshop 3</a>
+</article>
+<article class=item>
+<time class=post-date>10/02/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-10-early-email-talk/>UK networking - what of earth were we thinking?</a>
+</article>
+<article class=item>
+<time class=post-date>08/02/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-08-python2/>Introduction to Python - Workshop 2</a>
+</article>
+<article class=item>
+<time class=post-date>03/02/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-03-programming-cafe/>Programming Café</a>
+</article>
+<article class=item>
+<time class=post-date>01/02/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-01-python1/>Introduction to Python - Workshop 1</a>
+</article>
+<article class=item>
 <time class=post-date>16/12/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-12-07-email/>How email works: A Talk</a>
@@ -128,6 +168,11 @@
 <time class=post-date>13/07/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-egm/>EGM</a>
+</article>
+<article class=item>
+<time class=post-date>01/01/0001</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-12-hacknotts/>HackNotts 2021</a>
 </article>
 </main>
 <footer>
