deploy: 34321cd018f47f73b640c3b57584fabb6e23e86d

--- a/events/2022-02-17-c-50-years/index.html
+++ b/events/2022-02-17-c-50-years/index.html
@@ -39,8 +39,7 @@ February 17, 2022
 <div class=article-left>
 <h1>Half a century of C</h1>
 <div>
-<p>This year the C programming language will be turning 50 years old. From its roots inside Bell Labs where is was designed to make writing Unix easier it has come a long way, and is now one of hte most dominant languages, with untold millions of lines of code out in the wild.</p>
-<p>This event will be about C, but the exact details are TBD.</p>
+<p>2022 marks the 50th anniversary of the C programming language! To celebrate this, I (Jacob) am going to download many different historical C compilers and demonstrate how the language evolved from a simple language originally written in assembly, to the language we all know and love today.</p>
 </div>
 </div>
 </article>
