deploy: 43649869bc60dbd8f6301194c1115459b687091b

--- a/events/2022-02-01-python1/index.html
+++ b/events/2022-02-01-python1/index.html
@@ -34,7 +34,7 @@
 February 1, 2022
 </p>
 <h3>Where?</h3>
-<p>TBD</p>
+<p>LT3, Exchange building</p>
 </div>
 <div class=article-left>
 <h1>Introduction to Python - Workshop 1</h1>
