--- a/events/2022-02-10-early-email-talk/index.html
+++ b/events/2022-02-10-early-email-talk/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>UK networking - what of earth were we thinking?</title>
+<title>UK networking - What on earth were we thinking?</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -34,10 +34,10 @@
 February 10, 2022
 </p>
 <h3>Where?</h3>
-<p>TBD</p>
+<p>LT2</p>
 </div>
 <div class=article-left>
-<h1>UK networking - what of earth were we thinking?</h1>
+<h1>UK networking - What on earth were we thinking?</h1>
 <div>
 <p>In this talk, Dr Julian Onions talks a little about the history of email, and how we gradually connected our computers together so we could communicate world wide and work on projects together. He was involved in getting Nottingham University on the net in it&rsquo;s early days, and it wasn&rsquo;t all plain sailing. So - a bit of history, a bit about protocols, a bit of politics, and a lot of good old fashioned hacking to get us where we are today.</p>
 <p>Dr Julian Onions is a professor of astrophysics at the University of Nottingham, and was one of the people involved in the very earliest rollout of internet and email in the UK.</p>
