--- a/events/index.html
+++ b/events/index.html
@@ -52,7 +52,7 @@
 <article class=item>
 <time class=post-date>10/02/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-02-10-early-email-talk/>UK networking - what of earth were we thinking?</a>
+<a href=https://hacksocnotts.co.uk/events/2022-02-10-early-email-talk/>UK networking - What on earth were we thinking?</a>
 </article>
 <article class=item>
 <time class=post-date>08/02/2022</time>
