deploy: 3ffcd837b323bfed7aebc66ac0d77815f5c694e1

--- a/events/2022-02-10-early-email-talk/index.html
+++ b/events/2022-02-10-early-email-talk/index.html
@@ -34,7 +34,7 @@
 February 10, 2022
 </p>
 <h3>Where?</h3>
-<p>LT2</p>
+<p>LT2, Exchange Building</p>
 </div>
 <div class=article-left>
 <h1>UK networking - What on earth were we thinking?</h1>
