deploy: b4f5a73e31733ccfed33b04b6cdf9db5feb66cfa

--- a/events/2022-02-08-python2/index.html
+++ b/events/2022-02-08-python2/index.html
@@ -34,7 +34,7 @@
 February 8, 2022
 </p>
 <h3>Where?</h3>
-<p>TBD</p>
+<p>C3, Exchange Building</p>
 </div>
 <div class=article-left>
 <h1>Introduction to Python - Workshop 2</h1>
