deploy: 48635f340f1ce60fff51181b99b1b9c7fbc9dfea

--- a/events/2022-02-17-c-50-years/index.html
+++ b/events/2022-02-17-c-50-years/index.html
@@ -34,7 +34,7 @@
 February 17, 2022
 </p>
 <h3>Where?</h3>
-<p>TBD</p>
+<p>LT1, Exchange Building</p>
 </div>
 <div class=article-left>
 <h1>Half a century of C</h1>
