--- a/events/2022-02-24-programming-cafe/index.html
+++ b/events/2022-02-24-programming-cafe/index.html
@@ -34,7 +34,7 @@
 February 24, 2022
 </p>
 <h3>Where?</h3>
-<p>TBD</p>
+<p>C33, Exchange Building</p>
 </div>
 <div class=article-left>
 <h1>Programming Café</h1>
