--- a/events/2022-02-22-unity-workshop/index.html
+++ b/events/2022-02-22-unity-workshop/index.html
@@ -34,7 +34,7 @@
 February 22, 2022
 </p>
 <h3>Where?</h3>
-<p>TBD</p>
+<p>C3, Exchange Building</p>
 </div>
 <div class=article-left>
 <h1>Unity Workshop</h1>
