deploy: be9ec3f0483ac167b8ca12fe8da9dddf18282895

--- a/events/index.html
+++ b/events/index.html
@@ -32,12 +32,22 @@
 <article class=item>
 <time class=post-date>24/02/2022</time>
 &mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-22-programming-cafe/>Programming Café</a>
+</article>
+<article class=item>
+<time class=post-date>24/02/2022</time>
+&mdash;
 <a href=https://hacksocnotts.co.uk/events/2022-02-24-programming-cafe/>Programming Café</a>
 </article>
 <article class=item>
 <time class=post-date>22/02/2022</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2022-02-22-unity-workshop/>Unity Workshop</a>
+</article>
+<article class=item>
+<time class=post-date>22/02/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-24-unity-workshop/>Unity Workshop</a>
 </article>
 <article class=item>
 <time class=post-date>17/02/2022</time>
