--- a/events/index.html
+++ b/events/index.html
@@ -30,6 +30,16 @@
 <h1>Events</h1>
 </div>
 <article class=item>
+<time class=post-date>24/02/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-24-unity-workshop/>Unity Workshop</a>
+</article>
+<article class=item>
+<time class=post-date>22/02/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-02-22-programming-cafe/>Programming Café</a>
+</article>
+<article class=item>
 <time class=post-date>17/02/2022</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2022-02-17-c-50-years/>Half a century of C</a>
