deploy: 3ab3e8cc5df5b167d94437ab0d773dd252405067

--- a/events/index.html
+++ b/events/index.html
@@ -30,6 +30,16 @@
 <h1>Events</h1>
 </div>
 <article class=item>
+<time class=post-date>03/03/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-03-03-hosting-workshop/>Hosting Workshop</a>
+</article>
+<article class=item>
+<time class=post-date>01/03/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-03-01-python-internals-talk/>Python Internals Talk</a>
+</article>
+<article class=item>
 <time class=post-date>24/02/2022</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2022-02-24-unity-workshop/>Unity Workshop</a>
