deploy: bcc85afe249f9f87901f8ec71152d702f3b3eb1c

--- a/events/2022-03-01-python-internals-talk/index.html
+++ b/events/2022-03-01-python-internals-talk/index.html
@@ -41,7 +41,7 @@ March 1, 2022
 <div>
 <p>What actually happens when you tell Python to <code>print("Hello, world!")</code>? How does your computer turn the characters you type into something it understands, and then how exactly is this executed? What does it even mean to <em>compile</em> Python code - isn&rsquo;t it an interpreted language?</p>
 <p>All of these questions and more will be answered in this talk. Using Python as an example, Zac will give an in-depth look into how interpreted programming languages work from the ground up. Concepts covered will include scanning & parsing, compilation, and evaluation, among many more, giving you an insight the entire journey your program takes from source code to execution.</p>
-<p>Since the Python interpreter&rsquo;s source code is surrisingly readable, I&rsquo;ll be going through some snippets of C code, but understanding of C is by no means necessary.</p>
+<p>Since the Python interpreter&rsquo;s source code is surprisingly readable, I&rsquo;ll be going through some snippets of C code, but understanding of C is by no means necessary.</p>
 </div>
 </div>
 </article>
