deploy: 133bbc5e69d3e4c1d0e107b34acce8b8fe477411

--- a/events/2022-03-03-hosting-workshop/index.html
+++ b/events/2022-03-03-hosting-workshop/index.html
@@ -39,7 +39,8 @@ March 3, 2022
 <div class=article-left>
 <h1>Hosting Workshop</h1>
 <div>
-<p>Hosting workshop.</p>
+<p>Even if you have the best service in the world, it is all for nought if no one can access it. In this workshop GenSec James will be talking and walking you through hosting a web server serving the popular game <strong>Wordle</strong>, including steps such as DNS, Firewall, Ports, security hardening and other best practices.</p>
+<p>This knowledge can be applied to hosting almost any service in an internet accessible way, whether a website, game server, API, or something else.</p>
 </div>
 </div>
 </article>
