--- a/events/2022-02-17-c-50-years/index.html
+++ b/events/2022-02-17-c-50-years/index.html
@@ -3,8 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Half a century of C</title>
-<meta name=description content="HackSoc Nottingham">
+<title>Half a century of C</title><meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
@@ -13,38 +12,21 @@
 <link rel=stylesheet href=/css/mobile.css>
 <link rel=stylesheet href=/css/desktop.css>
 <script src=/js/calendar.js></script>
-</head>
-<body onload=loadCalendar()>
+</head><body onload=loadCalendar()>
 <header>
 <div class=title>
 <a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
-<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1>
-</div>
-<nav>
+<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav>
 <a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
 <a href=https://hacknotts.com/>HackNotts</a>
-</nav>
-</header>
-<main>
+</nav></header><main>
 <article class=article-split>
 <div class=article-right>
-<h3>When?</h3>
-<p>7-9pm</p>
-<p>
+<h3>When?</h3><p>7-9pm</p><p>
 February 17, 2022
-</p>
-<h3>Where?</h3>
-<p>LT1, Exchange Building</p>
-</div>
-<div class=article-left>
-<h1>Half a century of C</h1>
-<div>
-<p>2022 marks the 50th anniversary of the C programming language! To celebrate this, I (Jacob) am going to download many different historical C compilers and demonstrate how the language evolved from a simple language originally written in assembly, to the language we all know and love today.</p>
-</div>
-</div>
-</article>
-</main>
-<footer>
+</p><h3>Where?</h3><p>LT1, Exchange Building</p></div><div class=article-left>
+<h1>Half a century of C</h1><div>
+<p>2022 marks the 50th anniversary of the C programming language! To celebrate this, I (Jacob) am going to download many different historical C compilers and demonstrate how the language evolved from a simple language originally written in assembly, to the language we all know and love today.</p></div></div></article></main><footer>
 <section class=flex>
 <a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
@@ -53,8 +35,5 @@ February 17, 2022
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a>
-</section>
-<span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
-</footer>
-</body>
-</html>
+</section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
+</footer></body></html>
