--- a/committee/index.html
+++ b/committee/index.html
@@ -3,8 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Committee</title>
-<meta name=description content="HackSoc Nottingham">
+<title>Committee</title><meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
@@ -13,105 +12,65 @@
 <link rel=stylesheet href=/css/mobile.css>
 <link rel=stylesheet href=/css/desktop.css>
 <script src=/js/calendar.js></script>
-</head>
-<body onload=loadCalendar()>
+</head><body onload=loadCalendar()>
 <header>
 <div class=title>
 <a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
-<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1>
-</div>
-<nav>
+<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav>
 <a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
 <a href=https://hacknotts.com/>HackNotts</a>
-</nav>
-</header>
-<main>
+</nav></header><main>
 <article>
-<h1>Committee</h1>
-<div>
-<p>HackSoc is run by a committed and motivated team of students striving to give our members the best experiences possible.</p>
-</div>
-<div id=committee>
+<h1>Committee</h1><div>
+<p>HackSoc is run by a committed and motivated team of students striving to give our members the best experiences possible.</p></div><div id=committee>
 <div class=card>
 <img src=/img/team/PeterTaylor.png class=prof alt="Profile Photo">
-<h3>President</h3>
-Peter Taylor
+<h3>President</h3>Peter Taylor
 <ul class=contact>
 <li>
 <a href=https://pmy.pt3.uk><img src=/img/globe.svg alt=website></a>
-</li>
-<li>
+</li><li>
 <a href=https://twitter.com/pmypt3><img src=/img/twitter.svg alt=twitter></a>
-</li>
-<li>
+</li><li>
 <a href=mailto:peter.taylor@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
-</li>
-</ul>
-</div>
-<div class=card>
+</li></ul></div><div class=card>
 <img src=/img/team/JamesFrost.jpg class=prof alt="Profile Photo">
-<h3>General Secretary</h3>
-James Frost
+<h3>General Secretary</h3>James Frost
 <ul class=contact>
 <li>
 <a href=https://frost.cx><img src=/img/globe.svg alt=website></a>
-</li>
-<li>
+</li><li>
 <a href=mailto:james.frost@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
-</li>
-</ul>
-</div>
-<div class=card>
+</li></ul></div><div class=card>
 <img src=/img/team/JacobGarby.png class=prof alt="Profile Photo">
-<h3>Treasurer</h3>
-Jacob Garby
+<h3>Treasurer</h3>Jacob Garby
 <ul class=contact>
 <li>
 <a href=http://jacobgarby.co.uk><img src=/img/globe.svg alt=website></a>
-</li>
-<li>
+</li><li>
 <a href=mailto:jacob.garby@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
-</li>
-</ul>
-</div>
-<div class=card>
+</li></ul></div><div class=card>
 <img src=/img/team/ZacGarby.png class=prof alt="Profile Photo">
-<h3>Development Secretary</h3>
-Zac Garby
+<h3>Development Secretary</h3>Zac Garby
 <ul class=contact>
 <li>
 <a href=https://zacgarby.co.uk><img src=/img/globe.svg alt=website></a>
-</li>
-<li>
+</li><li>
 <a href=mailto:zac.garby@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
-</li>
-</ul>
-</div>
-<div class=card>
+</li></ul></div><div class=card>
 <img src class=prof alt="Profile Photo">
-<h3>Speaker Acquisition Secretary</h3>
-Liam-Elio Colabuono-McDonagh
+<h3>Speaker Acquisition Secretary</h3>Liam-Elio Colabuono-McDonagh
 <ul class=contact>
 <li>
 <a href=mailto:liam-e.c-m@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
-</li>
-</ul>
-</div>
-<div class=card>
+</li></ul></div><div class=card>
 <img src class=prof alt="Profile Photo">
-<h3>Cyber Security Secretary</h3>
-Alexander Orgill
+<h3>Cyber Security Secretary</h3>Alexander Orgill
 <ul class=contact>
 <li>
 <a href=mailto:alexander.orgill@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
-</li>
-</ul>
-</div>
-</div>
-As per the Student Union&rsquo;s regulation, our elections are run by <a href=https://en.wikipedia.org/wiki/Single_transferable_vote>Single Transferrable Vote (STV)</a> at either an AGM or EGM (annual or extraordinary general meeting). The AGM is normally run at the end of summer term, but may be at any time of year. The AGM will be publicised in advance.
-</article>
-</main>
-<footer>
+</li></ul></div></div>As per the Student Union&rsquo;s regulation, our elections are run by <a href=https://en.wikipedia.org/wiki/Single_transferable_vote>Single Transferrable Vote (STV)</a> at either an AGM or EGM (annual or extraordinary general meeting). The AGM is normally run at the end of summer term, but may be at any time of year. The AGM will be publicised in advance.
+</article></main><footer>
 <section class=flex>
 <a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
@@ -120,8 +79,5 @@ As per the Student Union&rsquo;s regulation, our elections are run by <a href=ht
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a>
-</section>
-<span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
-</footer>
-</body>
-</html>
+</section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
+</footer></body></html>
