--- a/events/2021-10-26/index.html
+++ b/events/2021-10-26/index.html
@@ -3,8 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Building a Raspberry Pi Robot Arm with .NET 5, Blazor and SignalR</title>
-<meta name=description content="HackSoc Nottingham">
+<title>Building a Raspberry Pi Robot Arm with .NET 5, Blazor and SignalR</title><meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
@@ -13,41 +12,21 @@
 <link rel=stylesheet href=/css/mobile.css>
 <link rel=stylesheet href=/css/desktop.css>
 <script src=/js/calendar.js></script>
-</head>
-<body onload=loadCalendar()>
+</head><body onload=loadCalendar()>
 <header>
 <div class=title>
 <a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
-<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1>
-</div>
-<nav>
+<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav>
 <a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
 <a href=https://hacknotts.com/>HackNotts</a>
-</nav>
-</header>
-<main>
+</nav></header><main>
 <article class=article-split>
 <div class=article-right>
-<h3>When?</h3>
-<p>7-9pm</p>
-<p>
+<h3>When?</h3><p>7-9pm</p><p>
 October 26, 2021
-</p>
-<h3>Where?</h3>
-<p>Exchange building LT3</p>
-</div>
-<div class=article-left>
-<h1>Building a Raspberry Pi Robot Arm with .NET 5, Blazor and SignalR</h1>
-<div>
-<p>In this talk Pete Gallagher takes you through everything you need to build a robot arm with a Raspberry Pi, .NET 5 a Blazor App and SignalR.</p>
-<p>We begin by talking about .NET 5 and seeing how easy it is to install .NET 5. Then we look through the various circuits and spin up a console application to explore how we can control the GPIO on the Pi. We see how the Servos are wired up and get the code in place to start moving our Raspberry pi based Robot Arm.</p>
-<p>Next we’ll look at a simple Blazor and SignalR app to control our robot remotely! Finally we’ll have a look at how we can use an Oculus Quest 2 to interact with our Robot Arm in VR!</p>
-<p>This talk appeals to all knowledge levels and anyone interested in getting into STEM, Electronics and Robotics.</p>
-</div>
-</div>
-</article>
-</main>
-<footer>
+</p><h3>Where?</h3><p>Exchange building LT3</p></div><div class=article-left>
+<h1>Building a Raspberry Pi Robot Arm with .NET 5, Blazor and SignalR</h1><div>
+<p>In this talk Pete Gallagher takes you through everything you need to build a robot arm with a Raspberry Pi, .NET 5 a Blazor App and SignalR.</p><p>We begin by talking about .NET 5 and seeing how easy it is to install .NET 5. Then we look through the various circuits and spin up a console application to explore how we can control the GPIO on the Pi. We see how the Servos are wired up and get the code in place to start moving our Raspberry pi based Robot Arm.</p><p>Next we’ll look at a simple Blazor and SignalR app to control our robot remotely! Finally we’ll have a look at how we can use an Oculus Quest 2 to interact with our Robot Arm in VR!</p><p>This talk appeals to all knowledge levels and anyone interested in getting into STEM, Electronics and Robotics.</p></div></div></article></main><footer>
 <section class=flex>
 <a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
@@ -56,8 +35,5 @@ October 26, 2021
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a>
-</section>
-<span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
-</footer>
-</body>
-</html>
+</section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
+</footer></body></html>
