--- a/events/2021-arch-install/index.html
+++ b/events/2021-arch-install/index.html
@@ -3,8 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Arch Install Event</title>
-<meta name=description content="HackSoc Nottingham">
+<title>Arch Install Event</title><meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
@@ -13,39 +12,21 @@
 <link rel=stylesheet href=/css/mobile.css>
 <link rel=stylesheet href=/css/desktop.css>
 <script src=/js/calendar.js></script>
-</head>
-<body onload=loadCalendar()>
+</head><body onload=loadCalendar()>
 <header>
 <div class=title>
 <a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
-<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1>
-</div>
-<nav>
+<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav>
 <a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
 <a href=https://hacknotts.com/>HackNotts</a>
-</nav>
-</header>
-<main>
+</nav></header><main>
 <article class=article-split>
 <div class=article-right>
-<h3>When?</h3>
-<p>7-9pm</p>
-<p>
+<h3>When?</h3><p>7-9pm</p><p>
 November 2, 2021
-</p>
-<h3>Where?</h3>
-<p>Exchange LT3</p>
-</div>
-<div class=article-left>
-<h1>Arch Install Event</h1>
-<div>
-<p>Prepare your best heckles, as Jacob and Peter will be installing <a href=https://archlinux.org>Arch Linux</a> live at this event - what could possibly go wrong?</p>
-<p>The event will take place in the Exchange LT3 lecture theatre on Jubilee Campus.</p>
-</div>
-</div>
-</article>
-</main>
-<footer>
+</p><h3>Where?</h3><p>Exchange LT3</p></div><div class=article-left>
+<h1>Arch Install Event</h1><div>
+<p>Prepare your best heckles, as Jacob and Peter will be installing <a href=https://archlinux.org>Arch Linux</a> live at this event - what could possibly go wrong?</p><p>The event will take place in the Exchange LT3 lecture theatre on Jubilee Campus.</p></div></div></article></main><footer>
 <section class=flex>
 <a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
@@ -54,8 +35,5 @@ November 2, 2021
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a>
-</section>
-<span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
-</footer>
-</body>
-</html>
+</section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
+</footer></body></html>
