--- a/events/2021-discord-bot-workshop/index.html
+++ b/events/2021-discord-bot-workshop/index.html
@@ -3,8 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Workshop: Discord Bots</title>
-<meta name=description content="HackSoc Nottingham">
+<title>Workshop: Discord Bots</title><meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
@@ -13,43 +12,21 @@
 <link rel=stylesheet href=/css/mobile.css>
 <link rel=stylesheet href=/css/desktop.css>
 <script src=/js/calendar.js></script>
-</head>
-<body onload=loadCalendar()>
+</head><body onload=loadCalendar()>
 <header>
 <div class=title>
 <a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
-<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1>
-</div>
-<nav>
+<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav>
 <a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
 <a href=https://hacknotts.com/>HackNotts</a>
-</nav>
-</header>
-<main>
+</nav></header><main>
 <article class=article-split>
 <div class=article-right>
-<h3>When?</h3>
-<p>7-9pm</p>
-<p>
+<h3>When?</h3><p>7-9pm</p><p>
 October 12, 2021
-</p>
-<h3>Where?</h3>
-<p>Exchange Building LT3</p>
-</div>
-<div class=article-left>
-<h1>Workshop: Discord Bots</h1>
-<div>
-<p>Come along to our first workshop of the year and learn how to make your own Discord bot using JavaScript!</p>
-<p>Prior knowledge of JavaScript or programming in general isn&rsquo;t necessary, as we&rsquo;ll be explaining everything as we go along. We&rsquo;ll be using the <a href=https://discord.js.org/#/>discord.js</a> library, which will be the main focus of the workshop.</p>
-<p>There&rsquo;ll be a quick introduction to the discord.js library, and then you&rsquo;re free to make whatever crazy idea you might have for a bot! We&rsquo;ll be available to help with any problems, so even if you&rsquo;re a total beginner to programming, you should end up with a working bot you can add to your Discord server.</p>
-<p>If you&rsquo;ve looked into Discord bots recently, you&rsquo;ll probably have heard about slash commands taking over. Discord seems to want to let bots only interact via users typing in actual commands, so this will be mostly what we cover, but we&rsquo;ll go over the &ldquo;old way&rdquo; of doing things as well.</p>
-<p>The event will take place in the Exchange Building LT3. If you want to follow along, you&rsquo;ll need to bring a laptop, since you&rsquo;ll need to install some software and we don&rsquo;t have access to the computer science lab at the moment.</p>
-<p>If possible, it would save time to install <a href=https://nodejs.org/en/>node.js</a> (the programming language we&rsquo;ll be using) in advance, as well as the discord.js library. If you&rsquo;re not sure how to do this, feel free to reach out in the discord, or we can help you at the beginning of the workshop. Also, it would help if you have a Discord account.</p>
-</div>
-</div>
-</article>
-</main>
-<footer>
+</p><h3>Where?</h3><p>Exchange Building LT3</p></div><div class=article-left>
+<h1>Workshop: Discord Bots</h1><div>
+<p>Come along to our first workshop of the year and learn how to make your own Discord bot using JavaScript!</p><p>Prior knowledge of JavaScript or programming in general isn&rsquo;t necessary, as we&rsquo;ll be explaining everything as we go along. We&rsquo;ll be using the <a href=https://discord.js.org/#/>discord.js</a> library, which will be the main focus of the workshop.</p><p>There&rsquo;ll be a quick introduction to the discord.js library, and then you&rsquo;re free to make whatever crazy idea you might have for a bot! We&rsquo;ll be available to help with any problems, so even if you&rsquo;re a total beginner to programming, you should end up with a working bot you can add to your Discord server.</p><p>If you&rsquo;ve looked into Discord bots recently, you&rsquo;ll probably have heard about slash commands taking over. Discord seems to want to let bots only interact via users typing in actual commands, so this will be mostly what we cover, but we&rsquo;ll go over the &ldquo;old way&rdquo; of doing things as well.</p><p>The event will take place in the Exchange Building LT3. If you want to follow along, you&rsquo;ll need to bring a laptop, since you&rsquo;ll need to install some software and we don&rsquo;t have access to the computer science lab at the moment.</p><p>If possible, it would save time to install <a href=https://nodejs.org/en/>node.js</a> (the programming language we&rsquo;ll be using) in advance, as well as the discord.js library. If you&rsquo;re not sure how to do this, feel free to reach out in the discord, or we can help you at the beginning of the workshop. Also, it would help if you have a Discord account.</p></div></div></article></main><footer>
 <section class=flex>
 <a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
@@ -58,8 +35,5 @@ October 12, 2021
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a>
-</section>
-<span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
-</footer>
-</body>
-</html>
+</section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
+</footer></body></html>
