--- a/events/2021-linux-intro/index.html
+++ b/events/2021-linux-intro/index.html
@@ -3,8 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Workshop: Introduction to Linux</title>
-<meta name=description content="HackSoc Nottingham">
+<title>Workshop: Introduction to Linux</title><meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
@@ -13,48 +12,22 @@
 <link rel=stylesheet href=/css/mobile.css>
 <link rel=stylesheet href=/css/desktop.css>
 <script src=/js/calendar.js></script>
-</head>
-<body onload=loadCalendar()>
+</head><body onload=loadCalendar()>
 <header>
 <div class=title>
 <a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
-<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1>
-</div>
-<nav>
+<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav>
 <a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
 <a href=https://hacknotts.com/>HackNotts</a>
-</nav>
-</header>
-<main>
+</nav></header><main>
 <article class=article-split>
 <div class=article-right>
-<h3>When?</h3>
-<p>7-9pm</p>
-<p>
+<h3>When?</h3><p>7-9pm</p><p>
 October 19, 2021
-</p>
-<h3>Where?</h3>
-<p>Exchange LT3</p>
-</div>
-<div class=article-left>
-<h1>Workshop: Introduction to Linux</h1>
-<div>
-<p>Come along to an introduction to Linux for those who haven&rsquo;t used the operating system before.</p>
-<p>This talk will cover several areas:</p>
-<ul>
-<li>What is Linux?</li>
-<li>Why would I use Linux?</li>
-<li>What makes Linux different from other operating systems?</li>
-<li>How do I get started with Linux?</li>
-<li>Common gotcha situations.</li>
-<li>How to find help?</li>
-</ul>
-<p>The event will take place in the Exchange Building LT3</p>
-</div>
-</div>
-</article>
-</main>
-<footer>
+</p><h3>Where?</h3><p>Exchange LT3</p></div><div class=article-left>
+<h1>Workshop: Introduction to Linux</h1><div>
+<p>Come along to an introduction to Linux for those who haven&rsquo;t used the operating system before.</p><p>This talk will cover several areas:</p><ul>
+<li>What is Linux?</li><li>Why would I use Linux?</li><li>What makes Linux different from other operating systems?</li><li>How do I get started with Linux?</li><li>Common gotcha situations.</li><li>How to find help?</li></ul><p>The event will take place in the Exchange Building LT3</p></div></div></article></main><footer>
 <section class=flex>
 <a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
@@ -63,8 +36,5 @@ October 19, 2021
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a>
-</section>
-<span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
-</footer>
-</body>
-</html>
+</section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
+</footer></body></html>
