deploy: 5be340ae0ec864b70859b029b385187ee7d8c44c

--- a/events/index.html
+++ b/events/index.html
@@ -22,6 +22,42 @@
 </nav></header><main>
 <div>
 <h1>Events</h1></div><article class=item>
+<time class=post-date>07/04/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-04-07-programming-cafe/>Programming Café</a>
+</article><article class=item>
+<time class=post-date>05/04/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-04-05-lightning-talks/>Lightning Talks</a>
+</article><article class=item>
+<time class=post-date>31/03/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-03-31-tbd-event/>TBD Event</a>
+</article><article class=item>
+<time class=post-date>29/03/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-03-29-accessability/>Accessibiity Talk</a>
+</article><article class=item>
+<time class=post-date>24/03/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-03-24-programming-cafe/>Programming Café</a>
+</article><article class=item>
+<time class=post-date>22/03/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-03-22-react-workshop/>React Workshop</a>
+</article><article class=item>
+<time class=post-date>17/03/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-03-17-aws-workshop/>AWS 'Serverless' Workshop</a>
+</article><article class=item>
+<time class=post-date>15/03/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-03-15-microcontroller-workshop/>Microcontroller Workshop</a>
+</article><article class=item>
+<time class=post-date>10/03/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-03-10-programming-cafe/>Programming Café</a>
+</article><article class=item>
 <time class=post-date>03/03/2022</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2022-03-03-hosting-workshop/>Hosting Workshop</a>
