--- a/events/2021-egm/index.html
+++ b/events/2021-egm/index.html
@@ -1,43 +1,11 @@
-<!doctype html><html lang=en-us>
-<head>
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<title>EGM</title><meta name=description content="HackSoc Nottingham">
-<meta name=author content="HackSoc Committee">
-<link rel=preconnect href=https://fonts.googleapis.com>
-<link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel=stylesheet>
-<link rel=stylesheet href=/css/style.css>
-<link rel=stylesheet href=/css/mobile.css>
-<link rel=stylesheet href=/css/desktop.css>
-<script src=/js/calendar.js></script>
-</head><body onload=loadCalendar()>
-<header>
-<div class=title>
-<a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
-<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav>
-<a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
-<a href=https://hacknotts.com/>HackNotts</a>
-</nav></header><main>
-<article class=article-split>
-<div class=article-right>
-<h3>When?</h3><p>7-9pm</p><p>
-July 13, 2021
-</p><h3>Where?</h3><p>Online</p></div><div class=article-left>
-<h1>EGM</h1><div>
-<p>Nominations for the remaining roles on the committee are now open, so be sure to nominate yourself if interested!
+<!doctype html><html lang=en-us><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=x-ua-compatible content="IE=edge"><title>EGM</title><meta name=description content="HackSoc Nottingham"><meta name=author content="HackSoc Committee"><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel=stylesheet><link rel=stylesheet href=/css/style.css><link rel=stylesheet href=/css/mobile.css><link rel=stylesheet href=/css/desktop.css><script src=/js/calendar.js></script></head><body onload=loadCalendar()><header><div class=title><a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a><h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav><a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
+<a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>July 13, 2021</p><h3>Where?</h3><p>Online</p></div><div class=article-left><h1>EGM</h1><div><p>Nominations for the remaining roles on the committee are now open, so be sure to nominate yourself if interested!
 On Tuesday the 13th of July at 7pm on our Discord we have an Extraordinary General Meeting (EGM) to fill out the roles on our committee. Make sure you come along to vote, and apply for a role if you are interested in contributing!
 If you want to run for committee yourself, please apply at <a href=https://hacksoc.net/nominate>https://hacksoc.net/nominate</a>. You can apply for multiple roles, so don&rsquo;t hold back! The details about the roles are in section 5.3 of our constitution.
-We are also looking for people interested in organising HackNotts 2021, our annual hackathon. If you are interested please apply at <a href=https://hacknotts.com/organise>https://hacknotts.com/organise</a>, and we will get back to you.</p><p>Here are the available committee positions:</p><ul>
-<li>Vice President</li><li>Welfare and Inclusivity Secretary</li><li>Social Media Secretary*</li><li>Marketing Secretary*</li><li>Graphics Officer</li><li>Industrial Partners Secretary</li><li>If you are interested in running for committee, please apply at <a href=https://hacksoc.net/nominate>https://hacksoc.net/nominate</a></li></ul><p>*If we don&rsquo;t fill both positions, we will put forth a motion to merge the Social Media and Marketing Secretary roles into one, so if you apply, keep in mind that you may end up doing both.</p></div></div></article></main><footer>
-<section class=flex>
-<a href=https://github.com/HackSocNotts>GitHub</a>
+We are also looking for people interested in organising HackNotts 2021, our annual hackathon. If you are interested please apply at <a href=https://hacknotts.com/organise>https://hacknotts.com/organise</a>, and we will get back to you.</p><p>Here are the available committee positions:</p><ul><li>Vice President</li><li>Welfare and Inclusivity Secretary</li><li>Social Media Secretary*</li><li>Marketing Secretary*</li><li>Graphics Officer</li><li>Industrial Partners Secretary</li><li>If you are interested in running for committee, please apply at <a href=https://hacksoc.net/nominate>https://hacksoc.net/nominate</a></li></ul><p>*If we don&rsquo;t fill both positions, we will put forth a motion to merge the Social Media and Marketing Secretary roles into one, so if you apply, keep in mind that you may end up doing both.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
 <a href=https://hacksoc.net/constitution.pdf>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
-<a href=/events>All Events</a>
-</section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
-</footer></body></html>
+<a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
