--- a/events/2021-go-workshop/index.html
+++ b/events/2021-go-workshop/index.html
@@ -1,39 +1,8 @@
-<!doctype html><html lang=en-us>
-<head>
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Introduction to Go</title><meta name=description content="HackSoc Nottingham">
-<meta name=author content="HackSoc Committee">
-<link rel=preconnect href=https://fonts.googleapis.com>
-<link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel=stylesheet>
-<link rel=stylesheet href=/css/style.css>
-<link rel=stylesheet href=/css/mobile.css>
-<link rel=stylesheet href=/css/desktop.css>
-<script src=/js/calendar.js></script>
-</head><body onload=loadCalendar()>
-<header>
-<div class=title>
-<a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
-<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav>
-<a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
-<a href=https://hacknotts.com/>HackNotts</a>
-</nav></header><main>
-<article class=article-split>
-<div class=article-right>
-<h3>When?</h3><p>7-9pm</p><p>
-November 16, 2021
-</p><h3>Where?</h3><p>Exchange LT1</p></div><div class=article-left>
-<h1>Introduction to Go</h1><div>
-<p><a href=https://golang.org>Go</a> is a modern systems programming language designed at Google by a bunch of clever people (including Ken Thompson who create UNIX and B, C&rsquo;s predecessor, so you <em>know</em> it must be good.) It&rsquo;s becoming a very popular language in a lot of spaces, especially on the web and in crypto.</p><p>This talk will introduce you to the basics of the Go programming language including installation, making a project, and the language itself. It&rsquo;s very similar to other C-like languages so if you know any of those then this talk will build on top of that knowledge, but it&rsquo;s by no means a requirement.</p><p>I&rsquo;ll be making a small web server from scratch as a demonstration of the language and the libraries that it comes with, but Go can be used for just about anything, including games, command line applications, GUI software, blockchain software, and almost anything else.</p><p>This event will take place in LT1 in the exchange building.</p></div></div></article></main><footer>
-<section class=flex>
-<a href=https://github.com/HackSocNotts>GitHub</a>
+<!doctype html><html lang=en-us><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=x-ua-compatible content="IE=edge"><title>Introduction to Go</title><meta name=description content="HackSoc Nottingham"><meta name=author content="HackSoc Committee"><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel=stylesheet><link rel=stylesheet href=/css/style.css><link rel=stylesheet href=/css/mobile.css><link rel=stylesheet href=/css/desktop.css><script src=/js/calendar.js></script></head><body onload=loadCalendar()><header><div class=title><a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a><h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav><a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
+<a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>November 16, 2021</p><h3>Where?</h3><p>Exchange LT1</p></div><div class=article-left><h1>Introduction to Go</h1><div><p><a href=https://golang.org>Go</a> is a modern systems programming language designed at Google by a bunch of clever people (including Ken Thompson who create UNIX and B, C&rsquo;s predecessor, so you <em>know</em> it must be good.) It&rsquo;s becoming a very popular language in a lot of spaces, especially on the web and in crypto.</p><p>This talk will introduce you to the basics of the Go programming language including installation, making a project, and the language itself. It&rsquo;s very similar to other C-like languages so if you know any of those then this talk will build on top of that knowledge, but it&rsquo;s by no means a requirement.</p><p>I&rsquo;ll be making a small web server from scratch as a demonstration of the language and the libraries that it comes with, but Go can be used for just about anything, including games, command line applications, GUI software, blockchain software, and almost anything else.</p><p>This event will take place in LT1 in the exchange building.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
 <a href=https://hacksoc.net/constitution.pdf>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
-<a href=/events>All Events</a>
-</section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
-</footer></body></html>
+<a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
