--- a/events/2021-welcome-week-ju/index.html
+++ b/events/2021-welcome-week-ju/index.html
@@ -1,40 +1,8 @@
-<!doctype html><html lang=en-us>
-<head>
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<title>2021 Welcome Week Event</title><meta name=description content="HackSoc Nottingham">
-<meta name=author content="HackSoc Committee">
-<link rel=preconnect href=https://fonts.googleapis.com>
-<link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel=stylesheet>
-<link rel=stylesheet href=/css/style.css>
-<link rel=stylesheet href=/css/mobile.css>
-<link rel=stylesheet href=/css/desktop.css>
-<script src=/js/calendar.js></script>
-</head><body onload=loadCalendar()>
-<header>
-<div class=title>
-<a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
-<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav>
-<a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
-<a href=https://hacknotts.com/>HackNotts</a>
-</nav></header><main>
-<article class=article-split>
-<div class=article-right>
-<h3>When?</h3><p>6:30-8:30pm</p><p>
-September 23, 2021
-</p><h3>Where?</h3><p>Business School South B52</p></div><div class=article-left>
-<h1>2021 Welcome Week Event</h1><div>
-<p>Welcome to HackSoc! To kick off the new academic year, we&rsquo;ve got our try-it introduction event. In this event, we&rsquo;ll have talks on the following:</p><ul>
-<li>Introduction to game development</li><li>JPEG compression</li><li>Docker & why it should be your friend</li></ul><p>In addition to an overall introduction to the society, and an overview of how you can get involved in the wider Nottingham tech community.</p><p>The event will take place in the large Business School South lecture theatre on Jubilee Campus, but will also be streamed <a href=https://www.youtube.com/channel/UC3cq7pgEjandUq9UHpEHaKw>on our YouTube channel</a> because we may have to limit the number of people attending due to COVID rules.</p><p>There will be pizza! 🍕</p></div></div></article></main><footer>
-<section class=flex>
-<a href=https://github.com/HackSocNotts>GitHub</a>
+<!doctype html><html lang=en-us><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=x-ua-compatible content="IE=edge"><title>2021 Welcome Week Event</title><meta name=description content="HackSoc Nottingham"><meta name=author content="HackSoc Committee"><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel=stylesheet><link rel=stylesheet href=/css/style.css><link rel=stylesheet href=/css/mobile.css><link rel=stylesheet href=/css/desktop.css><script src=/js/calendar.js></script></head><body onload=loadCalendar()><header><div class=title><a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a><h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav><a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
+<a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>6:30-8:30pm</p><p>September 23, 2021</p><h3>Where?</h3><p>Business School South B52</p></div><div class=article-left><h1>2021 Welcome Week Event</h1><div><p>Welcome to HackSoc! To kick off the new academic year, we&rsquo;ve got our try-it introduction event. In this event, we&rsquo;ll have talks on the following:</p><ul><li>Introduction to game development</li><li>JPEG compression</li><li>Docker & why it should be your friend</li></ul><p>In addition to an overall introduction to the society, and an overview of how you can get involved in the wider Nottingham tech community.</p><p>The event will take place in the large Business School South lecture theatre on Jubilee Campus, but will also be streamed <a href=https://www.youtube.com/channel/UC3cq7pgEjandUq9UHpEHaKw>on our YouTube channel</a> because we may have to limit the number of people attending due to COVID rules.</p><p>There will be pizza! 🍕</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
 <a href=https://hacksoc.net/constitution.pdf>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
-<a href=/events>All Events</a>
-</section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
-</footer></body></html>
+<a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
