--- a/events/2022-03-01-python-internals-talk/index.html
+++ b/events/2022-03-01-python-internals-talk/index.html
@@ -1,39 +1,8 @@
-<!doctype html><html lang=en-us>
-<head>
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Python Internals Talk</title><meta name=description content="HackSoc Nottingham">
-<meta name=author content="HackSoc Committee">
-<link rel=preconnect href=https://fonts.googleapis.com>
-<link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel=stylesheet>
-<link rel=stylesheet href=/css/style.css>
-<link rel=stylesheet href=/css/mobile.css>
-<link rel=stylesheet href=/css/desktop.css>
-<script src=/js/calendar.js></script>
-</head><body onload=loadCalendar()>
-<header>
-<div class=title>
-<a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
-<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav>
-<a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
-<a href=https://hacknotts.com/>HackNotts</a>
-</nav></header><main>
-<article class=article-split>
-<div class=article-right>
-<h3>When?</h3><p>7-9pm</p><p>
-March 1, 2022
-</p><h3>Where?</h3><p>LT1, Exchange Building</p></div><div class=article-left>
-<h1>Python Internals Talk</h1><div>
-<p>What actually happens when you tell Python to <code>print("Hello, world!")</code>? How does your computer turn the characters you type into something it understands, and then how exactly is this executed? What does it even mean to <em>compile</em> Python code - isn&rsquo;t it an interpreted language?</p><p>All of these questions and more will be answered in this talk. Using Python as an example, Zac will give an in-depth look into how interpreted programming languages work from the ground up. Concepts covered will include scanning & parsing, compilation, and evaluation, among many more, giving you an insight the entire journey your program takes from source code to execution.</p><p>Since the Python interpreter&rsquo;s source code is surprisingly readable, I&rsquo;ll be going through some snippets of C code, but understanding of C is by no means necessary.</p></div></div></article></main><footer>
-<section class=flex>
-<a href=https://github.com/HackSocNotts>GitHub</a>
+<!doctype html><html lang=en-us><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=x-ua-compatible content="IE=edge"><title>Python Internals Talk</title><meta name=description content="HackSoc Nottingham"><meta name=author content="HackSoc Committee"><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel=stylesheet><link rel=stylesheet href=/css/style.css><link rel=stylesheet href=/css/mobile.css><link rel=stylesheet href=/css/desktop.css><script src=/js/calendar.js></script></head><body onload=loadCalendar()><header><div class=title><a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a><h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav><a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
+<a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>March 1, 2022</p><h3>Where?</h3><p>LT1, Exchange Building</p></div><div class=article-left><h1>Python Internals Talk</h1><div><p>What actually happens when you tell Python to <code>print("Hello, world!")</code>? How does your computer turn the characters you type into something it understands, and then how exactly is this executed? What does it even mean to <em>compile</em> Python code - isn&rsquo;t it an interpreted language?</p><p>All of these questions and more will be answered in this talk. Using Python as an example, Zac will give an in-depth look into how interpreted programming languages work from the ground up. Concepts covered will include scanning & parsing, compilation, and evaluation, among many more, giving you an insight the entire journey your program takes from source code to execution.</p><p>Since the Python interpreter&rsquo;s source code is surprisingly readable, I&rsquo;ll be going through some snippets of C code, but understanding of C is by no means necessary.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
 <a href=https://hacksoc.net/constitution.pdf>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
-<a href=/events>All Events</a>
-</section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
-</footer></body></html>
+<a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
