--- a/events/index.html
+++ b/events/index.html
@@ -1,194 +1,88 @@
-<!doctype html><html lang=en-us>
-<head>
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Events</title><meta name=description content="HackSoc Nottingham">
-<meta name=author content="HackSoc Committee">
-<link rel=preconnect href=https://fonts.googleapis.com>
-<link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel=stylesheet>
-<link rel=stylesheet href=/css/style.css>
-<link rel=stylesheet href=/css/mobile.css>
-<link rel=stylesheet href=/css/desktop.css>
-<script src=/js/calendar.js></script>
-</head><body onload=loadCalendar()>
-<header>
-<div class=title>
-<a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
-<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav>
-<a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
-<a href=https://hacknotts.com/>HackNotts</a>
-</nav></header><main>
-<div>
-<h1>Events</h1></div><article class=item>
-<time class=post-date>07/04/2022</time>
+<!doctype html><html lang=en-us><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=x-ua-compatible content="IE=edge"><title>Events</title><meta name=description content="HackSoc Nottingham"><meta name=author content="HackSoc Committee"><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel=stylesheet><link rel=stylesheet href=/css/style.css><link rel=stylesheet href=/css/mobile.css><link rel=stylesheet href=/css/desktop.css><script src=/js/calendar.js></script></head><body onload=loadCalendar()><header><div class=title><a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a><h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav><a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
+<a href=https://hacknotts.com/>HackNotts</a></nav></header><main><div><h1>Events</h1></div><article class=item><time class=post-date>07/04/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-04-07-programming-cafe/>Programming Café</a>
-</article><article class=item>
-<time class=post-date>05/04/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-04-07-programming-cafe/>Programming Café</a></article><article class=item><time class=post-date>05/04/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-04-05-lightning-talks/>Lightning Talks</a>
-</article><article class=item>
-<time class=post-date>31/03/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-04-05-lightning-talks/>Lightning Talks</a></article><article class=item><time class=post-date>31/03/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-03-31-tbd-event/>TBD Event</a>
-</article><article class=item>
-<time class=post-date>29/03/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-03-31-tbd-event/>TBD Event</a></article><article class=item><time class=post-date>29/03/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-03-29-accessability/>Accessibiity Talk</a>
-</article><article class=item>
-<time class=post-date>24/03/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-03-29-accessability/>Accessibiity Talk</a></article><article class=item><time class=post-date>24/03/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-03-24-programming-cafe/>Programming Café</a>
-</article><article class=item>
-<time class=post-date>22/03/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-03-24-programming-cafe/>Programming Café</a></article><article class=item><time class=post-date>22/03/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-03-22-react-workshop/>React Workshop</a>
-</article><article class=item>
-<time class=post-date>17/03/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-03-22-react-workshop/>React Workshop</a></article><article class=item><time class=post-date>17/03/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-03-17-aws-workshop/>AWS 'Serverless' Workshop</a>
-</article><article class=item>
-<time class=post-date>15/03/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-03-17-aws-workshop/>AWS 'Serverless' Workshop</a></article><article class=item><time class=post-date>15/03/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-03-15-microcontroller-workshop/>Microcontroller Workshop</a>
-</article><article class=item>
-<time class=post-date>10/03/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-03-15-microcontroller-workshop/>Microcontroller Workshop</a></article><article class=item><time class=post-date>10/03/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-03-10-programming-cafe/>Programming Café</a>
-</article><article class=item>
-<time class=post-date>03/03/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-03-10-programming-cafe/>Programming Café</a></article><article class=item><time class=post-date>03/03/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-03-03-hosting-workshop/>Hosting Workshop</a>
-</article><article class=item>
-<time class=post-date>01/03/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-03-03-hosting-workshop/>Hosting Workshop</a></article><article class=item><time class=post-date>01/03/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-03-01-python-internals-talk/>Python Internals Talk</a>
-</article><article class=item>
-<time class=post-date>24/02/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-03-01-python-internals-talk/>Python Internals Talk</a></article><article class=item><time class=post-date>24/02/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-02-24-unity-workshop/>Unity Workshop</a>
-</article><article class=item>
-<time class=post-date>22/02/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-02-24-unity-workshop/>Unity Workshop</a></article><article class=item><time class=post-date>22/02/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-02-22-programming-cafe/>Programming Café</a>
-</article><article class=item>
-<time class=post-date>17/02/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-02-22-programming-cafe/>Programming Café</a></article><article class=item><time class=post-date>17/02/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-02-17-c-50-years/>Half a century of C</a>
-</article><article class=item>
-<time class=post-date>15/02/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-02-17-c-50-years/>Half a century of C</a></article><article class=item><time class=post-date>15/02/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-02-15-python3/>Introduction to Python - Workshop 3</a>
-</article><article class=item>
-<time class=post-date>10/02/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-02-15-python3/>Introduction to Python - Workshop 3</a></article><article class=item><time class=post-date>10/02/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-02-10-early-email-talk/>UK networking - What on earth were we thinking?</a>
-</article><article class=item>
-<time class=post-date>08/02/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-02-10-early-email-talk/>UK networking - What on earth were we thinking?</a></article><article class=item><time class=post-date>08/02/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-02-08-python2/>Introduction to Python - Workshop 2</a>
-</article><article class=item>
-<time class=post-date>03/02/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-02-08-python2/>Introduction to Python - Workshop 2</a></article><article class=item><time class=post-date>03/02/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-02-03-programming-cafe/>Programming Café</a>
-</article><article class=item>
-<time class=post-date>01/02/2022</time>
+<a href=https://hacksocnotts.co.uk/events/2022-02-03-programming-cafe/>Programming Café</a></article><article class=item><time class=post-date>01/02/2022</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-02-01-python1/>Introduction to Python - Workshop 1</a>
-</article><article class=item>
-<time class=post-date>16/12/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2022-02-01-python1/>Introduction to Python - Workshop 1</a></article><article class=item><time class=post-date>16/12/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-12-07-email/>How email works: A Talk</a>
-</article><article class=item>
-<time class=post-date>14/12/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-12-07-email/>How email works: A Talk</a></article><article class=item><time class=post-date>14/12/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-12-14-blog-workshop/>Making a blog and getting it online!</a>
-</article><article class=item>
-<time class=post-date>09/12/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-12-14-blog-workshop/>Making a blog and getting it online!</a></article><article class=item><time class=post-date>09/12/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-12-09-programming-cafe/>Programming Café</a>
-</article><article class=item>
-<time class=post-date>07/12/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-12-09-programming-cafe/>Programming Café</a></article><article class=item><time class=post-date>07/12/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-12-16-christmas/>HackSoc Christmas Quiz</a>
-</article><article class=item>
-<time class=post-date>25/11/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-12-16-christmas/>HackSoc Christmas Quiz</a></article><article class=item><time class=post-date>25/11/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-11-25-programming-cafe/>Programming Café</a>
-</article><article class=item>
-<time class=post-date>18/11/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-11-25-programming-cafe/>Programming Café</a></article><article class=item><time class=post-date>18/11/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-11-18-programming-cafe/>Programming Café</a>
-</article><article class=item>
-<time class=post-date>16/11/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-11-18-programming-cafe/>Programming Café</a></article><article class=item><time class=post-date>16/11/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-go-workshop/>Introduction to Go</a>
-</article><article class=item>
-<time class=post-date>11/11/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-go-workshop/>Introduction to Go</a></article><article class=item><time class=post-date>11/11/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-11-11/>What they don't teach you in a tech degree</a>
-</article><article class=item>
-<time class=post-date>09/11/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-11-11/>What they don't teach you in a tech degree</a></article><article class=item><time class=post-date>09/11/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-11-09/>RHLy Old Linux</a>
-</article><article class=item>
-<time class=post-date>02/11/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-11-09/>RHLy Old Linux</a></article><article class=item><time class=post-date>02/11/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-arch-install/>Arch Install Event</a>
-</article><article class=item>
-<time class=post-date>28/10/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-arch-install/>Arch Install Event</a></article><article class=item><time class=post-date>28/10/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-28-prog-cafe/>Programming Café</a>
-</article><article class=item>
-<time class=post-date>26/10/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-10-28-prog-cafe/>Programming Café</a></article><article class=item><time class=post-date>26/10/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-26/>Building a Raspberry Pi Robot Arm with .NET 5, Blazor and SignalR</a>
-</article><article class=item>
-<time class=post-date>21/10/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-10-26/>Building a Raspberry Pi Robot Arm with .NET 5, Blazor and SignalR</a></article><article class=item><time class=post-date>21/10/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-21-docker/>Workshop: Docker</a>
-</article><article class=item>
-<time class=post-date>19/10/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-10-21-docker/>Workshop: Docker</a></article><article class=item><time class=post-date>19/10/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-linux-intro/>Workshop: Introduction to Linux</a>
-</article><article class=item>
-<time class=post-date>14/10/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-linux-intro/>Workshop: Introduction to Linux</a></article><article class=item><time class=post-date>14/10/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-14-prog-cafe/>Programming Café</a>
-</article><article class=item>
-<time class=post-date>12/10/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-10-14-prog-cafe/>Programming Café</a></article><article class=item><time class=post-date>12/10/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-discord-bot-workshop/>Workshop: Discord Bots</a>
-</article><article class=item>
-<time class=post-date>30/09/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-discord-bot-workshop/>Workshop: Discord Bots</a></article><article class=item><time class=post-date>30/09/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-09-30-programming-cafe/>Programming Café</a>
-</article><article class=item>
-<time class=post-date>28/09/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-09-30-programming-cafe/>Programming Café</a></article><article class=item><time class=post-date>28/09/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-up/>2021 Welcome Week Event</a>
-</article><article class=item>
-<time class=post-date>23/09/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-up/>2021 Welcome Week Event</a></article><article class=item><time class=post-date>23/09/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-ju/>2021 Welcome Week Event</a>
-</article><article class=item>
-<time class=post-date>13/07/2021</time>
+<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-ju/>2021 Welcome Week Event</a></article><article class=item><time class=post-date>13/07/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-egm/>EGM</a>
-</article><article class=item>
-<time class=post-date>01/01/0001</time>
+<a href=https://hacksocnotts.co.uk/events/2021-egm/>EGM</a></article><article class=item><time class=post-date>01/01/0001</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-02-12-hacknotts/>HackNotts 2021</a>
-</article></main><footer>
-<section class=flex>
-<a href=https://github.com/HackSocNotts>GitHub</a>
+<a href=https://hacksocnotts.co.uk/events/2022-02-12-hacknotts/>HackNotts 2021</a></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
 <a href=https://hacksoc.net/constitution.pdf>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
-<a href=/events>All Events</a>
-</section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
-</footer></body></html>
+<a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
