deploy: e717bc866df8bbe92fb2d45eb2d98c71de6253f0

--- a/events/index.html
+++ b/events/index.html
@@ -7,6 +7,8 @@
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2022-03-31-agm/>AGM (Elect the Next Committee!)</a></article><article class=item><time class=post-date>29/03/2022</time>
 &mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-03-29-accessability/>Accessibiity Talk</a></article><article class=item><time class=post-date>29/03/2022</time>
+&mdash;
 <a href=https://hacksocnotts.co.uk/events/2022-03-29-accessibility/>Accessibility Talk</a></article><article class=item><time class=post-date>24/03/2022</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2022-03-24-programming-cafe/>Programming Café</a></article><article class=item><time class=post-date>22/03/2022</time>
